force-app/main/default/objects/Supplier_Portal_Content__c/Supplier_Portal_Content__c.object-meta.xml
<CustomObject>
    <description>Object to store information to be displayed on the supplier&apos;s portal website.</description>
    <label>Supplier Portal Content</label>
    <nameField>
        <label>Supplier Portal Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Portal Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>