force-app/main/default/objects/Supplier_Portal_Content__c/fields/RegimeExclusivo__c.field-meta.xml
<CustomField>
    <fullName>RegimeExclusivo__c</fullName>
    <label>Categoria Exclusiva Nacional – SEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>