force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_About_Modec__c.field-meta.xml
<CustomField>
    <fullName>TW1_About_Modec__c</fullName>
    <label>About Modec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>