force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_About_Modec_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_About_Modec_URL__c</fullName>
    <label>About Modec URL</label>
    <type>Url</type>
</CustomField>