force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Bottom_Picture__c.field-meta.xml
<CustomField>
    <fullName>TW1_Bottom_Picture__c</fullName>
    <label>Bottom Picture</label>
    <type>Url</type>
</CustomField>