force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Busca_rapida__c.field-meta.xml
<CustomField>
    <fullName>TW1_Busca_rapida__c</fullName>
    <label>Busca rapida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>