force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Cadastro_novo_fornecedor_txt_Pag2__c.field-meta.xml
<CustomField>
    <fullName>TW1_Cadastro_novo_fornecedor_txt_Pag2__c</fullName>
    <label>Cadastro novo fornecedor txt Pag2</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>