force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Carousel_Picture_3__c.field-meta.xml
<CustomField>
    <fullName>TW1_Carousel_Picture_3__c</fullName>
    <label>Carousel Picture 3</label>
    <type>Url</type>
</CustomField>