force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Categorias_disponiveis__c.field-meta.xml
<CustomField>
    <fullName>TW1_Categorias_disponiveis__c</fullName>
    <label>Categorias disponiveis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>