force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Code_of_conduct_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_Code_of_conduct_URL__c</fullName>
    <label>Code of conduct URL</label>
    <type>Url</type>
</CustomField>