force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Codigo_de_conduta__c.field-meta.xml
<CustomField>
    <fullName>TW1_Codigo_de_conduta__c</fullName>
    <label>Codigo de conduta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>