force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Compliance_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_Compliance_URL__c</fullName>
    <label>Compliance URL</label>
    <type>Url</type>
</CustomField>