force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Concluir_btn__c.field-meta.xml
<CustomField>
    <fullName>TW1_Concluir_btn__c</fullName>
    <label>Concluir btn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>