force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Contact_Us_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contact_Us_URL__c</fullName>
    <label>Contact Us URL</label>
    <type>Url</type>
</CustomField>