force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Contato_responsavel__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contato_responsavel__c</fullName>
    <label>Contato responsavel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>