force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Cover_Picture__c.field-meta.xml
<CustomField>
    <fullName>TW1_Cover_Picture__c</fullName>
    <label>Cover Picture</label>
    <type>Url</type>
</CustomField>