force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Cover_PictureRT__c.field-meta.xml
<CustomField>
    <fullName>TW1_Cover_PictureRT__c</fullName>
    <label>Cover Picture1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>