force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Email_do_contato__c.field-meta.xml
<CustomField>
    <fullName>TW1_Email_do_contato__c</fullName>
    <label>Email do contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>