force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Endereco__c.field-meta.xml
<CustomField>
    <fullName>TW1_Endereco__c</fullName>
    <label>Endereco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>