force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Endereco_de_Email__c.field-meta.xml
<CustomField>
    <fullName>TW1_Endereco_de_Email__c</fullName>
    <label>Endereco de Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>