force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Etapas_de_Cadastro__c.field-meta.xml
<CustomField>
    <fullName>TW1_Etapas_de_Cadastro__c</fullName>
    <label>Etapas de Cadastro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>