force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Ethic_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_Ethic_URL__c</fullName>
    <label>Ethic URL</label>
    <type>Url</type>
</CustomField>