force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Etica__c.field-meta.xml
<CustomField>
    <fullName>TW1_Etica__c</fullName>
    <label>Etica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>