force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Falha_no_cadastro_txt__c.field-meta.xml
<CustomField>
    <fullName>TW1_Falha_no_cadastro_txt__c</fullName>
    <label>Falha no cadastro txt</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>