force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_FAQ_Content__c.field-meta.xml
<CustomField>
    <fullName>TW1_FAQ_Content__c</fullName>
    <label>FAQ Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>