force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Manuais__c.field-meta.xml
<CustomField>
    <fullName>TW1_Manuais__c</fullName>
    <label>Manuais</label>
    <length>255</length>
    <type>Text</type>
</CustomField>