force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Nome_da_Empresa__c.field-meta.xml
<CustomField>
    <fullName>TW1_Nome_da_Empresa__c</fullName>
    <label>Nome da Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>