force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Page_Language__c.field-meta.xml
<CustomField>
    <fullName>TW1_Page_Language__c</fullName>
    <label>Page Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>