force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Portal_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_Portal_Login_URL__c</fullName>
    <label>Portal Login URL</label>
    <type>Url</type>
</CustomField>