force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Privacy_Policy_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_Privacy_Policy_URL__c</fullName>
    <label>Privacy Policy URL</label>
    <type>Url</type>
</CustomField>