force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Quero_ser_Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>TW1_Quero_ser_Fornecedor__c</fullName>
    <label>Quero ser Fornecedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>