force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Registration_steps_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_Registration_steps_URL__c</fullName>
    <label>Registration steps URL</label>
    <type>Url</type>
</CustomField>