force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Seja_um_Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>TW1_Seja_um_Fornecedor__c</fullName>
    <label>Seja um Fornecedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>