force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Site_Map_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_Site_Map_URL__c</fullName>
    <label>Site Map URL</label>
    <type>Url</type>
</CustomField>