force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Stage_Content_Left__c.field-meta.xml
<CustomField>
    <fullName>TW1_Stage_Content_Left__c</fullName>
    <label>Stage Content Left</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>