force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Stage_Content_Right__c.field-meta.xml
<CustomField>
    <fullName>TW1_Stage_Content_Right__c</fullName>
    <label>Stage Content Right</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>