force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Sucesso_no_cadastro_txt__c.field-meta.xml
<CustomField>
    <fullName>TW1_Sucesso_no_cadastro_txt__c</fullName>
    <label>Sucesso no cadastro txt</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>