force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_T_and_C__c.field-meta.xml
<CustomField>
    <fullName>TW1_T_and_C__c</fullName>
    <label>T and C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>