force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_T_and_C_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_T_and_C_URL__c</fullName>
    <label>T and C URL</label>
    <type>Url</type>
</CustomField>