force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Termo_de_aceite_pt3__c.field-meta.xml
<CustomField>
    <fullName>TW1_Termo_de_aceite_pt3__c</fullName>
    <label>Termo de aceite pt3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>