force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Terms_Conditions_URL__c.field-meta.xml
<CustomField>
    <fullName>TW1_Terms_Conditions_URL__c</fullName>
    <label>Terms &amp; Conditions URL</label>
    <type>Url</type>
</CustomField>