force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Tipo_de_categoria__c.field-meta.xml
<CustomField>
    <fullName>TW1_Tipo_de_categoria__c</fullName>
    <label>Tipo de categoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>