force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW1_Welcome_Title__c.field-meta.xml
<CustomField>
    <fullName>TW1_Welcome_Title__c</fullName>
    <label>Welcome Title</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>