force-app/main/default/objects/Supplier_Portal_Content__c/fields/TW3_Taxpayer__c.field-meta.xml
<CustomField>
    <fullName>TW3_Taxpayer__c</fullName>
    <label>Taxpayer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>