force-app/main/default/objects/Supplier_Portal_Content__c/recordTypes/Supplier_Portal_BR.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Portal_BR</fullName>
    <active>true</active>
    <description>Content do portal destinado ao brasil</description>
    <label>Supplier Portal BR</label>
</RecordType>