force-app/main/default/objects/Supplier_Portal_Content__c/recordTypes/Supplier_Portal_Senegal.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Portal_Senegal</fullName>
    <active>true</active>
    <description>Content do portal destinado a Senegal</description>
    <label>Supplier Portal Senegal</label>
</RecordType>